--- a/LinkDevelopment.LogViewer/LinkDevelopment.LogViewer.csproj
+++ b/LinkDevelopment.LogViewer/LinkDevelopment.LogViewer.csproj
@@ -52,12 +52,21 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="LogItemView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="LogItemView.Designer.cs">
+      <DependentUpon>LogItemView.cs</DependentUpon>
+    </Compile>
     <Compile Include="Models\LogItem.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="LogItemView.resx">
+      <DependentUpon>LogItemView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
