--- a/LinkDevelopment.LogViewer/LinkDevelopment.LogViewer.csproj
+++ b/LinkDevelopment.LogViewer/LinkDevelopment.LogViewer.csproj
@@ -46,11 +46,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="LogViewer.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="LogViewer.Designer.cs">
+      <DependentUpon>LogViewer.cs</DependentUpon>
     </Compile>
     <Compile Include="LogItemView.cs">
       <SubType>Form</SubType>
@@ -61,9 +61,15 @@
     <Compile Include="Models\LogItem.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StatusPattern.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="StatusPattern.Designer.cs">
+      <DependentUpon>StatusPattern.cs</DependentUpon>
+    </Compile>
     <Compile Include="Utils.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="LogViewer.resx">
+      <DependentUpon>LogViewer.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="LogItemView.resx">
       <DependentUpon>LogItemView.cs</DependentUpon>
@@ -77,6 +83,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="StatusPattern.resx">
+      <DependentUpon>StatusPattern.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
